# clave_unica_api

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  cli.py  docker-compose.yml  gemini.md  pyproject.toml
api/: api.py
src/: __init__.py  worker.py
src/config/: config.py  logger.py  selectors.py
src/dto/: afc_data.py  cmf_data.py  sii_data.py
src/facades/: __init__.py  scraper_facade.py
src/models/: clave_unica.py
src/queue/: deduplicator.py  models.py  queue_manager.py
src/scrapers/: AFC_scraper.py  CMF_scraper.py  SII_scraper.py  base_scraper.py  captcha_solver.py  login_scraper.py
src/scrapers/login_strategies/: base_strategy.py  clave_unica_strategy.py
src/utils/: exceptions.py  rut_validator.py  utils.py
