[project]
name = "certificados-unicos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "tabulate>=0.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "mangum>=0.17.0",
    "boto3>=1.34.0",
    "ruff>=0.5.0",
    "playwright-recaptcha>=0.5.1",
    "beautifulsoup4>=4.12.3",
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.6",
]
