[project]
name = "clave_unica_api"
version = "0.1.0"
description = "API for Clave Unica and its services, including CMF data scraping."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.5.0",
    "playwright-recaptcha>=0.5.1",
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=6.2.1",
]
