[project]
name = "clave_unica_api"
version = "0.1.0"
description = "API for Clave Unica and its services, including CMF data scraping."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.5.0",
    "playwright-recaptcha>=0.5.1",
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=6.2.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "redis>=6.2.0",
    "requests>=2.32.3",
]


[project.scripts]
clave-unica = "cli:main"

[project.gui-scripts]
api = "api.api:app"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=src --cov-report=html"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
